@@ -66,6 +66,10 @@
 	/* Function Prototypes: */
 		void DataflashManager_WriteBlocks(const uint32_t BlockAddress, uint16_t TotalBlocks);
 		void DataflashManager_ReadBlocks(const uint32_t BlockAddress, uint16_t TotalBlocks);
+		void DataflashManager_WriteBlocks_RAM(const uint32_t BlockAddress, uint16_t TotalBlocks,
+		                                      uint8_t* BufferPtr) ATTR_NON_NULL_PTR_ARG(3);
+		void DataflashManager_ReadBlocks_RAM(const uint32_t BlockAddress, uint16_t TotalBlocks,
+		                                     uint8_t* BufferPtr) ATTR_NON_NULL_PTR_ARG(3);
 		void DataflashManager_ResetDataflashProtections(void);
 		
 #endif
